# etf-constituents

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  db.py  enums.py  etl.py  exceptions.py  holdings.py  ingest.py  main.py  models.py  page_source.html  pyproject.toml  requirements.txt  schemas.py  scrapers.py  shell.nix  test.py  test.xls  tests.py  xls_handler.py
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 5263be4b0dc3_create_funds_table.py
app/: main.py
data/: Holdings.json
docs/: etl.drawio
ishares/: scrapy.cfg
ishares/ishares/: items.py  middlewares.py  pipelines.py  settings.py
ishares/ishares/spiders/: degiro_spider.py  ishares_spider.py  quotes_spider.py
