[tool.poetry]
name = "etf-constituents"
version = "0.1.0"
description = "Scrape ETF data"
authors = ["Daniel Steman <daniel-steman@live.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.9.0"
selenium = "^4.10.0"
httpx = "^0.24.1"
black = "^23.3.0"
selenium-wire = "^5.1.0"
pre-commit = "^3.3.3"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
