[tool.poetry]
name = "etf-constituents"
version = "0.1.0"
description = "Scrape ETF data"
authors = ["Daniel Steman <daniel-steman@live.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.9.0"
selenium = "^4.10.0"
httpx = "^0.24.1"
black = "^23.3.0"
selenium-wire = "^5.1.0"
pre-commit = "^3.3.3"
pytest = "^7.4.0"
pydantic = "^2.0.2"
python-dotenv = "^1.0.0"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.278"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
